--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 #tensorflow>=2.5.0
-scikit-learn
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-opencv-python-headless
+tensorflow-cpu>=2.5.0  # Using CPU version for better compatibility
+scikit-learn>=1.2.2
+streamlit>=1.22.0
+pandas>=2.0.0
+numpy>=1.24.3
+matplotlib>=3.7.1
+seaborn>=0.12.2
+opencv-python-headless>=4.7.0
+pillow>=9.5.0
+requests>=2.31.0
+plotly>=5.14.1
+python-dotenv>=1.0.0
+kaggle==1.5.16
+pathlib==1.0.1
