--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,12 @@ python-dotenv>=1.0.0
 pathlib==1.0.1
 h5py>=3.9.0
 joblib>=1.3.0
+flask==2.0.1
+flask-cors==3.0.10
+tensorflow==2.15.0
+pillow==10.0.0
+python-dotenv==0.19.0
+gunicorn==21.2.0
+scikit-learn==1.3.0
+joblib==1.3.1
+h5py==3.10.0
