--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
-#tensorflow>=2.5.0
-tensorflow-cpu>=2.5.0  # Using CPU version for better compatibility
-scikit-learn>=1.2.2
-streamlit>=1.22.0
-pandas>=2.0.0
-numpy>=1.24.3
-matplotlib>=3.7.1
-seaborn>=0.12.2
-opencv-python-headless>=4.7.0
-pillow>=9.5.0
-requests>=2.31.0
-plotly>=5.14.1
-python-dotenv>=1.0.0
-pathlib==1.0.1
-h5py>=3.9.0
-joblib>=1.3.0
+# Core ML dependencies
+tensorflow-cpu==2.15.0
+scikit-learn==1.3.0
+numpy==1.24.3
+h5py==3.10.0
+joblib==1.3.1
+
+# Web framework
 flask==2.0.1
 flask-cors==3.0.10
-tensorflow==2.15.0
-pillow==10.0.0
-python-dotenv==0.19.0
 gunicorn==21.2.0
-scikit-learn==1.3.0
-joblib==1.3.1
-h5py==3.10.0
+
+# Image processing
+pillow==10.0.0
+opencv-python-headless==4.11.0.86
+
+# Data processing and visualization
+pandas==2.0.0
+matplotlib==3.7.1
+seaborn==0.12.2
+plotly==6.0.1
+
+# Utilities
+python-dotenv==1.1.0
+requests==2.31.0
+pathlib==1.0.1
